# SFML-Painting-App

./: .gitignore  CMakeLists.txt  Readme.md
include/: App.hpp  Command.hpp  Draw.hpp  MathUtility.hpp  RoundedLine.hpp
src/: App.cpp  Command.cpp  Draw.cpp  MathUtility.cpp  RoundedLine.cpp  main.cpp
tests/: AppTest.cpp  CMakeLists.txt  DrawTest.cpp  MathUtilityTest.cpp  README.md
tutorial/: README.md
tutorial/SingletonExample/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
